# PDF-Reader

./: .gitignore  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.web.config.ts
.github/workflows/: deploy-web.yml  release-desktop.yml
skills/annotation-layer/: SKILL.md
skills/content-hashing/: SKILL.md
skills/design-tokens/: SKILL.md
skills/pdfjs-reader-engine/: SKILL.md
skills/reading-themes/: SKILL.md
skills/router-isolation/: SKILL.md
skills/tauri-data-boundary/: SKILL.md
src/: index.html  main.ts  main.web.ts  web.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: crypto.rs  library.rs  mod.rs  reader.rs  settings.rs
src-tauri/src/storage/: mod.rs
src/components/Common/: NavBar.ts
src/components/Reader/: AnnotationLayer.ts  AnnotationPanel.ts  Outline.ts  ReaderView.ts
src/components/WebLibrary/: WebLibraryView.ts
src/core/: app.ts  hash.ts  types.ts  view.ts
src/core/backend/: idb.ts  index.ts  opfs.ts  tauri.ts  types.ts  web.ts
src/core/events/: index.ts
src/core/navigation/: index.ts  router.ts
src/core/reader/: index.ts
src/core/theme/: index.ts
src/core/weblibrary/: index.ts
src/core/zoom/: index.ts
src/public/: manifest.webmanifest  sw.js
src/styles/: main.css  tokens.css
