[package]
name = "libra-local"
version = "0.1.1"
description = "Premium, local-first, offline PDF reader."
edition = "2021"
rust-version = "1.77"

# A lib target is required for Tauri v2 mobile entry points.
# Desktop entry lives in main.rs and delegates to `run()` in lib.rs.
[lib]
name = "libra_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util"] }
tauri-plugin-dialog = "2"
notify = "6"

[profile.release]
# Optimize for small binary + responsiveness on low-resource devices.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
